--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-ace": "^5.8.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
     "three": "^0.89.0"
