--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-ace": "^5.8.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
-    "three": "^0.89.0"
+    "three": "^0.89.0",
+    "three-orbit-controls": "^82.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
