--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-ace": "^5.8.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
+    "react-tabs": "^2.1.1",
     "stats.js": "^0.17.0",
     "three": "^0.89.0",
     "three-orbit-controls": "^82.1.0"
