--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-ace": "^5.8.0",
+    "react-dat-gui": "^1.0.2",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
     "react-tabs": "^2.1.1",
