--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-tabs": "^2.1.1",
     "stats.js": "^0.17.0",
     "three": "^0.89.0",
+    "three-obj-loader": "^1.1.3",
     "three-orbit-controls": "^82.1.0"
   },
   "scripts": {
